<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/description_border">


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">
        <TableRow>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:src="@drawable/descr_ic_shop_black_18dp"
                android:layout_weight="1"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:src="@drawable/desc_ic_share_black_18dp"
                android:layout_weight="1"/>
        </TableRow>
        <TableRow
            android:layout_marginTop="10dp">
            <TextView
                android:text="@string/playMarket"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:textSize="15sp"/>
            <TextView
                android:text="@string/share"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:textSize="15sp"/>
        </TableRow>
    </TableLayout>

    <View android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/descDivider"
        android:layout_marginTop="20dp"
        style="@style/desc_content_in_border"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/desc_app_name"
        android:textColor="@color/descText"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        style="@style/desc_content_in_border"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/desc_content_in_border"
        android:weightSum="8">
        <TableRow>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/desr_ic_cloud_upload_black_24dp"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/desc_achiv"
                android:layout_marginTop="6dp"
                android:layout_marginLeft="5dp"
                android:layout_weight="3"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/desr_ic_cloud_upload_black_24dp"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/desc_rating_play"
                android:layout_marginTop="6dp"
                android:layout_marginLeft="5dp"
                android:layout_weight="3"/>
        </TableRow>
        <TableRow>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/desr_ic_cloud_upload_black_24dp"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/desc_cloud"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="6dp"
                android:layout_weight="3"/>
            <ImageView
                android:layout_weight="1"/>
            <TextView
                android:layout_weight="3"/>
        </TableRow>

    </TableLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/desc_desc_top"
        android:layout_marginTop="20dp"
        style="@style/desc_content_in_border"
        android:textSize="20sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/desc_desc_part1"
        style="@style/desc_content_in_border"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/desc_desc_part2"
        style="@style/desc_content_in_border"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/desc_mes_top"
        style="@style/desc_content_in_border"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/desc_mes_part1"
        style="@style/desc_content_in_border"/>

</LinearLayout>