<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="horizontal">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="206dp"
            android:src="@drawable/alto_img_main"
            android:scaleType="centerCrop"
            android:adjustViewBounds="true"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/alto_ic_play_circle_filled_black_36dp"
            android:layout_gravity="center"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/alto_ic_search_white_24dp"
            android:layout_gravity="top|right"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/alto_ic_arrow_back_white_24dp"
            android:layout_gravity="top|left"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"/>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        android:padding="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_alto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/alto_icon"/>
            <TextView
                android:id="@+id/txt_app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alto_app_name"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_toRightOf="@id/img_alto"
                android:layout_marginLeft="20dp"/>
            <TextView
                android:id="@+id/txt_app_com"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alto_app_company"
                android:layout_toRightOf="@id/img_alto"
                android:layout_below="@id/txt_app_name"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alto_age_limit"
                android:textStyle="bold"
                android:layout_toRightOf="@id/img_alto"
                android:layout_below="@id/txt_app_com"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="20dp"
                android:padding="2dp"
                android:background="@drawable/alto_border"/>

            <Button
                android:id="@+id/btn_alto_install"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alto_button_setup"
                android:layout_below="@id/img_alto"
                android:layout_alignParentRight="true"
                style="@style/alto_button_setup"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alto_money"
                android:layout_below="@id/btn_alto_install"
                android:layout_alignParentRight="true"
                android:layout_marginTop="10dp"/>
        </RelativeLayout>

        <View android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/descDivider"
            android:layout_marginTop="20dp"
            style="@style/desc_content_in_border"/>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TableRow>

            </TableRow>
            <TableRow>
                <TextView
                    android:text="@string/alto_download"
                    android:layout_weight="1"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_weight="1">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/alto_download_count"/>
                    <ImageView
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:src="@drawable/alto_ic_person_black_18dp"
                        android:layout_marginLeft="2dp"/>
                </LinearLayout>
                <TextView
                    android:text="@string/alto_app_category"
                    android:layout_weight="1"/>

                <TextView
                    android:text="@string/alto_similar_app"
                    android:layout_weight="1"/>
            </TableRow>
        </TableLayout>

        <View android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/descDivider"
            android:layout_marginTop="20dp"
            style="@style/desc_content_in_border"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alto_description"
            android:gravity="center"
            android:textSize="16sp"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alto_read_next"
            android:layout_marginTop="10dp"
            style="@style/alto_read_next"/>

    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/alto_img_2"
        android:scaleType="centerCrop"
        android:layout_marginTop="10dp"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/alto_ic_sentiment_satisfied_black_36dp"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alto_nick"
        android:textSize="17sp"
        android:textColor="#000000"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:textStyle="bold"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alto_grade"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/alto_ic_star_border_black_24dp"
            android:layout_weight="1"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/alto_ic_star_border_black_24dp"
            android:layout_weight="1"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/alto_ic_star_border_black_24dp"
            android:layout_weight="1"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/alto_ic_star_border_black_24dp"
            android:layout_weight="1"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/alto_ic_star_border_black_24dp"
            android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>



</ScrollView>