<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/games_background"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:background="@drawable/games_border">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="#249904">

            </LinearLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_gravity="bottom"
                android:padding="5dp">
                <TextView
                    android:id="@+id/txt_user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/games_user_name"
                    android:textSize="@dimen/games_txt_user_name"
                    android:textStyle="bold"
                    android:textColor="#000000"/>
                <TextView
                    android:id="@+id/txt_user_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/games_user_descr"
                    android:textSize="11sp"
                    android:textColor="#000000"
                    android:layout_below="@id/txt_user_name"
                    android:layout_marginBottom="@dimen/games_txt_user_desc_align"
                    android:layout_marginTop="3dp"/>
                <TextView
                    android:id="@+id/games_txt_user_exp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/games_user_exp"
                    android:layout_alignParentRight="true"
                    android:layout_alignBottom="@id/txt_user_name"
                    android:textSize="11sp"
                    android:textColor="@color/games_progress"/>
                <ProgressBar
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="visible"
                    android:layout_alignParentRight="true"
                    android:max="100"
                    android:progress="70"
                    style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
                    android:layout_alignBottom="@+id/txt_user_desc"
                    android:layout_alignTop="@+id/txt_user_desc"
                    android:layout_alignRight="@id/txt_user_desc"
                    android:layout_alignLeft="@+id/games_txt_user_exp"
                    android:layout_alignStart="@+id/games_txt_user_exp"
                    android:progressTint="@color/games_progress"
                    android:progressBackgroundTint="@color/games_progress_back"
                    android:layout_marginTop="3dp"/>
            </RelativeLayout>
            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/games_user_foto"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/games_circle"
                    android:layout_gravity="bottom|right"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/games_user_count"
                    android:textColor="#ffffff"
                    android:layout_gravity="right|bottom"
                    android:layout_marginBottom="@dimen/games_marg_circle_number"
                    android:layout_marginRight="@dimen/games_marg_circle_number"/>

            </FrameLayout>
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:layout_marginTop="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/games_new_games"
                style="@style/games_txt_more_games"
                android:layout_gravity="center"/>
            <Button
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:text="@string/games_btn_more"
                style="@style/games_btn_more"
                android:paddingTop="1dp"/>
        </LinearLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TableRow>
                <LinearLayout
                    style="@style/games_app_layout">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/games_clash"
                        android:layout_gravity="center"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/games_app_name_1"
                        style="@style/games_app_name"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/games_app_com_1"
                        style="@style/games_app_com"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/games_app_price_free"
                        style="@style/games_app_price"/>
                </LinearLayout>

                <LinearLayout
                    style="@style/games_app_layout"
                    >
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/games_dragon"
                        android:layout_gravity="center"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/games_app_name_2"
                        style="@style/games_app_name"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/games_app_com_2"
                        style="@style/games_app_com"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/games_app_price_free"
                        style="@style/games_app_price"/>
                </LinearLayout>
                <LinearLayout
                    style="@style/games_app_layout"
                    >
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/games_clash_king"
                        android:layout_gravity="center"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/games_app_name_3"
                        style="@style/games_app_name"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/games_app_com_3"
                        style="@style/games_app_com"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/games_app_price_free"
                        style="@style/games_app_price"/>
                </LinearLayout>
            </TableRow>

            <TableRow>
                <LinearLayout
                    style="@style/games_app_layout">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/games_clash"
                        android:layout_gravity="center"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/games_app_name_1"
                        style="@style/games_app_name"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/games_app_com_1"
                        style="@style/games_app_com"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/games_app_price_free"
                        style="@style/games_app_price"/>
                </LinearLayout>

                <LinearLayout
                    style="@style/games_app_layout"
                    >
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/games_dragon"
                        android:layout_gravity="center"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/games_app_name_2"
                        style="@style/games_app_name"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/games_app_com_2"
                        style="@style/games_app_com"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/games_app_price_free"
                        style="@style/games_app_price"/>
                </LinearLayout>
                <LinearLayout
                    style="@style/games_app_layout">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/games_clash_king"
                        android:layout_gravity="center"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/games_app_name_3"
                        style="@style/games_app_name"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/games_app_com_3"
                        style="@style/games_app_com"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/games_app_price_free"
                        style="@style/games_app_price"/>
                </LinearLayout>
            </TableRow>

        </TableLayout>
    </LinearLayout>


</ScrollView>